--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,9 +16,26 @@ pipeline {
             }
         }
         stage('Deploy to Staging'){
-steps{
-        build job:'Deploy-to-staging'
-}
+            steps{
+                build job:'Deploy-to-staging'
+                }
+        }
+        stage('Deploy to production'){
+            steps{
+                timeout(time:5,unit:'DAYS'){
+                    input message:'Approved PRODUCTION Deployment ?'
+                }
+                build job:'deploy-to-prod'
+            }
+            post{
+                success{
+                    echo 'code deploy to production.'
+                }
+
+                failure{
+                    echo 'Deployment failed'
+                }
+            }
         }
         
     }
